fixed category view on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,7 @@
     padding: 0;
     margin-top: 2em;
 }
+
+img {
+    width: 100%;
+}
